Renamed quota-config to quota-config-managed-api-service

--- a/config/configmap/quota-config-managed-api-service.yaml
+++ b/config/configmap/quota-config-managed-api-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: quota-config
+  name: quota-config-managed-api-service
 data:
   quota-configs: |-
     [        
