add QUOTA env to operator in case of no value provided by secret aka user upgrade from older version with no quota functionality default to use 20 million sku in that case for local dev we use default QUOTA of 1 so as long as make cluster/prepare/local is ran the env should be used

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,5 @@ test/*.json
 # Kubernetes Generated files - skip generated files, except for vendored files
 
 !vendor/**/zz_generated.*
+
+test-cases/package-lock.json
