--- a/packagemanifests/managed-api-service/1.7.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.7.0/managed-api-service.clusterserviceversion.yaml
@@ -51,11 +51,11 @@ metadata:
     capabilities: Basic Install
     categories: RHOAM integration
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.7.0-rc1
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.7.0-rc2
     operators.operatorframework.io/builder: operator-sdk-v1.2.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
-    serviceAffecting: "true"
+    serviceAffecting: "false"
   name: managed-api-service.v1.7.0
   namespace: placeholder
 spec:
@@ -416,7 +416,7 @@ spec:
                   value: default@test.com
                 - name: QUOTA
                   value: "20"
-                image: quay.io/integreatly/managed-api-service:rhoam-v1.7.0-rc1
+                image: quay.io/integreatly/managed-api-service:rhoam-v1.7.0-rc2
                 imagePullPolicy: Always
                 name: rhmi-operator
                 ports:
