--- a/config/secrets/addon-params-secret.yaml
+++ b/config/secrets/addon-params-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: quota-secret
+  name: addon-params-secret
 objects:
   - apiVersion: v1
     kind: Secret
@@ -14,6 +14,7 @@ objects:
       custom-smtp-password: ${PASSWORD}
       custom-smtp-port: ${PORT}
       custom-smtp-from_address: ${FROM}
+      sts-role-arn: ${StsRoleARN}
 parameters:
   - name: QUOTA
     # QUOTA value is per 100,000
@@ -28,3 +29,5 @@ parameters:
     value: "567"
   - name: FROM
     value: "test@example.com"
+  - name: StsRoleARN
+    value: "arn:aws:iam::485026278258:role/12345"
