--- a/config/secrets/addon-params-secret.yaml
+++ b/config/secrets/addon-params-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: quota-secret
+  name: addon-params-secret
 objects:
   - apiVersion: v1
     kind: Secret
@@ -9,6 +9,9 @@ objects:
       name: addon-managed-api-service-parameters
     stringData:
       addon-managed-api-service: ${QUOTA}
+      sts-role-arn: ${StsRoleARN}
 parameters:
   - name: QUOTA
     value: "1"
+  - name: StsRoleARN
+    value: "arn:aws:iam::485026278258:role/12345"
