--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -249,6 +249,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - operator.openshift.io
+  resources:
+  - cloudcredentials
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - operators.coreos.com
   resourceNames:
   - rhmi-registry-cs
