--- a/Dockerfile.osde2e
+++ b/Dockerfile.osde2e
@@ -19,7 +19,7 @@ COPY Makefile ./
 COPY manifests/ ./manifests
 RUN make test/compile/osde2e
 
-FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
+FROM registry.access.redhat.com/ubi8-micro:latest
 
 COPY --from=builder /go/src/github.com/integr8ly/integreatly-operator/managed-api-test-harness.test managed-api-test-harness.test
 
