--- a/packagemanifests/integreatly-operator/2.9.0/rhmi-operator-metrics_monitoring.coreos.com_v1_servicemonitor.yaml
+++ b/packagemanifests/integreatly-operator/2.9.0/rhmi-operator-metrics_monitoring.coreos.com_v1_servicemonitor.yaml
@@ -6,8 +6,12 @@ metadata:
   name: rhmi-operator-metrics
 spec:
   endpoints:
-  - path: /metrics
-    port: http-metrics
+  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    path: /metrics
+    port: https
+    scheme: https
+    tlsConfig:
+      insecureSkipVerify: true
   selector:
     matchLabels:
       name: rhmi-operator
