prepare for release rhoam-v1.8.0-rc2

--- a/packagemanifests/managed-api-service/1.8.0/rhmi-operator-metrics_monitoring.coreos.com_v1_servicemonitor.yaml
+++ b/packagemanifests/managed-api-service/1.8.0/rhmi-operator-metrics_monitoring.coreos.com_v1_servicemonitor.yaml
@@ -6,12 +6,8 @@ metadata:
   name: rhmi-operator-metrics
 spec:
   endpoints:
-  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    path: /metrics
-    port: https
-    scheme: https
-    tlsConfig:
-      insecureSkipVerify: true
+  - path: /metrics
+    port: http-metrics
   selector:
     matchLabels:
       name: rhmi-operator
