feat!: Support "implicit" product operator installation
Extend product operator installation declaration file to support a new
type by specifying the `implicit` `installFrom` value.
When using this value for a product, the operator won't attempt to
reconcile a new CatalogSource for it, but instead will assume that the
CatalogSource that provided the RHOAM operator also provides this
product. Therefore, it will attempt to locate this CatalogSource and
create a Subscription for the product using that CatalogSource and the
specified `package` and `channel`

--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -1,7 +1,7 @@
 # Product declaration file. This file declares the available product operators
 # and how to install them.
 # 
-# Currently supports "local" and "index" installations.
+# Currently supports "local", "index" and "implicit" installations.
 #
 # ------------------------------------------------------------------------------
 #
@@ -35,6 +35,21 @@
 # ```
 #
 # ------------------------------------------------------------------------------
+#
+# Implicit:
+#
+# Install the operator by creating a Subscription assuming that the operator is
+# provided by the same CatalogSource that installed RHOAM.
+#
+# * Example:
+#
+# ```
+# product:
+#   installFrom: "implicit"
+#   channel: "alpha"
+# ```
+#
+# --------------------------------------------------------------------------------
 #
 # Common fields:
 # * `channel`: Name of the channel to point the Subscription to. Defaults to "rhmi"
