--- a/packagemanifests/managed-api-service/1.8.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.8.0/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: RHOAM integration
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.8.0-rc2
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.8.0
     operators.operatorframework.io/builder: operator-sdk-v1.7.1+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
@@ -416,7 +416,7 @@ spec:
                   value: default@test.com
                 - name: QUOTA
                   value: "20"
-                image: quay.io/integreatly/managed-api-service:rhoam-v1.8.0-rc2
+                image: quay.io/integreatly/managed-api-service:rhoam-v1.8.0
                 imagePullPolicy: Always
                 name: rhmi-operator
                 ports:
