--- a/config/secrets/quota-secret.yaml
+++ b/config/secrets/quota-secret.yaml
@@ -11,4 +11,5 @@ objects:
       addon-managed-api-service: ${QUOTA}
 parameters:
   - name: QUOTA
+    # QUOTA value is per 100,000
     value: "1"
