--- a/manifests/integreatly-3scale/0.7.0/3scale-operator.v0.7.0.clusterserviceversion.yaml
+++ b/manifests/integreatly-3scale/0.7.0/3scale-operator.v0.7.0.clusterserviceversion.yaml
@@ -318,7 +318,7 @@ metadata:
     capabilities: Full Lifecycle
     categories: Integration & Delivery
     certified: "false"
-    containerImage: registry.redhat.io/3scale-amp2/3scale-rhel7-operator@sha256:655062177bc53b155b87876dc1096530c365f18f9be3ceb0d32aa2d343968f9a
+    containerImage: registry.redhat.io/3scale-amp2/3scale-rhel7-operatorsha256:5063f838a8a7649626231edabf47debc3d4e36f69de37675d126b19fdbeb69c3
     createdAt: "2019-05-30T22:40:00Z"
     description: 3scale Operator to provision 3scale and publish/manage API
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -491,7 +491,7 @@ spec:
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7@sha256:de3ab628b403dc5eed986a7f392c34687bddafee7bdfccfd65cecf137ade3dfd
                 - name: OC_CLI_IMAGE
                   value: registry.redhat.io/openshift4/ose-cli@sha256:353036a27e810730ce35d699dcf09141af9f8ae9e365116755016d864475c2c4
-                image: registry.redhat.io/3scale-amp2/3scale-rhel7-operator@sha256:655062177bc53b155b87876dc1096530c365f18f9be3ceb0d32aa2d343968f9a
+                image: registry.redhat.io/3scale-amp2/3scale-rhel7-operator@sha256:5063f838a8a7649626231edabf47debc3d4e36f69de37675d126b19fdbeb69c3
                 name: 3scale-operator
                 resources:
                   requests:
