add multitenant-managed-api installation type

--- a/config/configmap/cro-configmaps.yaml
+++ b/config/configmap/cro-configmaps.yaml
@@ -11,3 +11,5 @@ data:
     {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
   managed-api: >
     {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
+  multitenant-managed-api: >
+    {"blobstorage":"openshift", "smtpcredentials":"openshift", "redis":"openshift", "postgres":"openshift"}
