update UPS image to 0.5.1

--- a/manifests/integreatly-unifiedpush/0.5.1/unifiedpush-operator.v0.5.1.clusterserviceversion.yaml
+++ b/manifests/integreatly-unifiedpush/0.5.1/unifiedpush-operator.v0.5.1.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ spec:
                       fieldPath: metadata.name
                 - name: OPERATOR_NAME
                   value: unifiedpush-operator
-                image: quay.io/integreatly/aerogear-unifiedpush-operator:v0.5.1
+                image: quay.io/integreatly/aerogear-unifiedpush-operator:0.5.1
                 imagePullPolicy: Always
                 name: unifiedpush-operator
                 resources:
