--- a/manifests/integreatly-monitoring/1.6.3/application-monitoring-operator.v1.6.3.clusterserviceversion.yaml
+++ b/manifests/integreatly-monitoring/1.6.3/application-monitoring-operator.v1.6.3.clusterserviceversion.yaml
@@ -25,6 +25,21 @@ spec:
       kind: BlackboxTarget
       name: blackboxtargets.applicationmonitoring.integreatly.org
       version: v1alpha1
+    - description: Represents an installation of the Integreatly Grafana operator.
+      displayName: Integreatly monitoring Grafana Operator.
+      kind: Grafana
+      name: grafanas.integreatly.org
+      version: v1alpha1
+    - description: Represents an instance of the Integreatly Grafana dashboard.
+      displayName: Integreatly monitoring Grafana dashboard.
+      kind: GrafanaDashboard
+      name: grafanadashboards.integreatly.org
+      version: v1alpha1
+    - description: Represents an instance of the Integreatly Grafana datasource.
+      displayName: Integreatly monitoring Grafana datasource.
+      kind: GrafanaDataSource
+      name: grafanadatasources.integreatly.org
+      version: v1alpha1
   description: Placeholder description
   displayName: Application Monitoring Operator
   icon:
