--- a/packagemanifests/integreatly-operator/2.9.2/integreatly-operator.clusterserviceversion.yaml
+++ b/packagemanifests/integreatly-operator/2.9.2/integreatly-operator.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: RHMI integration
     certified: "false"
-    containerImage: quay.io/integreatly/integreatly-operator:v2.9.2-rc1
+    containerImage: quay.io/integreatly/integreatly-operator:v2.9.2
     olm.skipRange: '>=2.4.0 <2.6.1'
     operators.operatorframework.io/builder: operator-sdk-v1.7.1+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
@@ -416,7 +416,7 @@ spec:
                   value: default@test.com
                 - name: QUOTA
                   value: "20"
-                image: quay.io/integreatly/integreatly-operator:v2.9.2-rc1
+                image: quay.io/integreatly/integreatly-operator:v2.9.2
                 imagePullPolicy: Always
                 name: rhmi-operator
                 ports:
@@ -619,5 +619,5 @@ spec:
   maturity: alpha
   provider:
     name: rhmi
-  replaces: integreatly-operator.v2.9.1
   version: 2.9.2
+  replaces: integreatly-operator.v2.9.1
