--- a/envs/multitenant-managed-api.env
+++ b/envs/multitenant-managed-api.env
@@ -9,3 +9,5 @@ IDENTITY_PROVIDER_NAME ?= devsandbox
 INSTALLATION_NAME ?= rhoam
 INSTALLATION_SHORTHAND ?= sandbox
 NAMESPACE=$(NAMESPACE_PREFIX)operator
+export NUMBER_OF_TENANTS := 10
+export TENANTS_CREATION_TIMEOUT := 3
