installing multitenant under new namespace

--- a/envs/multitenant-managed-api.env
+++ b/envs/multitenant-managed-api.env
@@ -1,10 +1,10 @@
 PROJECT=managed-api-service
 TAG ?= $(RHOAM_TAG)
 OPERATOR_IMAGE=$(REG)/$(ORG)/$(PROJECT):v$(TAG)
-NAMESPACE_PREFIX ?= redhat-rhoam-
+NAMESPACE_PREFIX ?= sandbox-rhoam-
 APPLICATION_REPO ?= managed-api-service
-export INSTALLATION_PREFIX ?= redhat-rhoam
+export INSTALLATION_PREFIX ?= sandbox-rhoam
 export OLM_TYPE ?= multitenant-managed-api-service
 INSTALLATION_NAME ?= rhoam
-INSTALLATION_SHORTHAND ?= rhoam
+INSTALLATION_SHORTHAND ?= sandbox
 NAMESPACE=$(NAMESPACE_PREFIX)operator
