--- a/envs/multitenant-managed-api.env
+++ b/envs/multitenant-managed-api.env
@@ -5,7 +5,7 @@ NAMESPACE_PREFIX ?= sandbox-rhoam-
 APPLICATION_REPO ?= managed-api-service
 export INSTALLATION_PREFIX ?= sandbox-rhoam
 export OLM_TYPE ?= multitenant-managed-api-service
-IDENTITY_PROVIDER_NAME ?= rhd
+IDENTITY_PROVIDER_NAME ?= DevSandbox
 INSTALLATION_NAME ?= rhoam
 INSTALLATION_SHORTHAND ?= sandbox
 NAMESPACE=$(NAMESPACE_PREFIX)operator
