--- a/config/manifests-rhmi/bases/integreatly-operator.clusterserviceversion.yaml
+++ b/config/manifests-rhmi/bases/integreatly-operator.clusterserviceversion.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   annotations:
+    operatorframework.io/suggested-namespace: redhat-rhmi-operator
     alm-examples: '[]'
     capabilities: Basic Install
     categories: RHMI integration
