Update default name of IDP and CSV generation

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -61,4 +61,6 @@ spec:
             value: "default@test.com"
           - name: QUOTA
             value: "200"
+          - name: IDENTITY_PROVIDER_NAME
+            value: "DevSandbox"
       terminationGracePeriodSeconds: 10
