--- a/packagemanifests/managed-api-service/1.12.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.12.0/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: RHOAM integration
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.12.0-rc1
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.12.0
     operators.operatorframework.io/builder: operator-sdk-v1.7.1+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
     support: RHOAM
@@ -420,7 +420,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:rhoam-v1.12.0-rc1
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.12.0
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
@@ -626,7 +626,6 @@ spec:
   maturity: alpha
   provider:
     name: rhoam
-  replaces: managed-api-service.v1.11.0
   selector:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
