add uninstall to monitoring stage and status

--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -141,6 +141,8 @@ spec:
                             type: string
                           type:
                             type: string
+                          uninstall:
+                            type: boolean
                           version:
                             type: string
                         required:
