rhsso 7.5 openJDK image for keycloak containter

--- a/manifests/integreatly-rhsso/15.0.0/rhsso-operator.15.0.0.clusterserviceversion.yaml
+++ b/manifests/integreatly-rhsso/15.0.0/rhsso-operator.15.0.0.clusterserviceversion.yaml
@@ -179,6 +179,8 @@ spec:
             spec:
               containers:
               - env:
+                - name: RELATED_IMAGE_RHSSO_OPENJDK
+                  value: quay.io/jfitzpat/delorean:rh-sso-7-sso75-openshift-rhel8_7.5
                 - name: WATCH_NAMESPACE
                   valueFrom:
                     fieldRef:
