update manager.yaml and add few logs temporary

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -62,5 +62,5 @@ spec:
           - name: QUOTA
             value: "200"
           - name: IDENTITY_PROVIDER_NAME
-            value: "DevSandbox"
+            value: "devsandbox"
       terminationGracePeriodSeconds: 10
