--- a/manifests/integreatly-observability-operator/observability-operator.package.yaml
+++ b/manifests/integreatly-observability-operator/observability-operator.package.yaml
@@ -1,5 +1,5 @@
 channels:
-  - currentCSV: observability-operator.v3.0.7
+  - currentCSV: observability-operator.3.0.7
     name: rhmi
 defaultChannel: rhmi
 packageName: rhmi-observability-operator
