change the service account back to keycloak-operator

--- a/manifests/integreatly-rhsso/15.0.0/rhsso-operator.15.0.0.clusterserviceversion.yaml
+++ b/manifests/integreatly-rhsso/15.0.0/rhsso-operator.15.0.0.clusterserviceversion.yaml
@@ -201,7 +201,7 @@ spec:
                 imagePullPolicy: Always
                 name: rhsso-operator
                 resources: {}
-              serviceAccountName: rhsso-operator
+              serviceAccountName: keycloak-operator
       permissions:
       - rules:
         - apiGroups:
@@ -335,7 +335,7 @@ spec:
           - list
           - update
           - watch
-        serviceAccountName: rhsso-operator
+        serviceAccountName: keycloak-operator
     strategy: deployment
   installModes:
   - supported: true
