--- a/manifests/integreatly-rhsso/rhsso.package.yaml
+++ b/manifests/integreatly-rhsso/rhsso.package.yaml
@@ -1,5 +1,5 @@
 channels:
-- currentCSV: rhsso-operator.15.0.0
+- currentCSV: keycloak-operator.v15.0.2
   name: rhmi
 defaultChannel: rhmi
 packageName: rhmi-rhsso
