--- a/manifests/integreatly-rhsso/15.0.2/keycloak-operator.v15.0.2.clusterserviceversion.yaml
+++ b/manifests/integreatly-rhsso/15.0.2/keycloak-operator.v15.0.2.clusterserviceversion.yaml
@@ -198,6 +198,10 @@ spec:
                         value: registry.redhat.io/rh-sso-7/sso75-openshift-rhel8@sha256:b92b2180440481827745c29857875f1169f0f5373efe07a447bd67909e70f601
                       - name: RELATED_IMAGE_RHSSO_OPENJ9
                         value: registry.redhat.io/rh-sso-7/sso75-openj9-openshift-rhel8@sha256:31bf3937c4cd8d00555bf00f4fc6e42b02796da72165c3f0245e62fc199664e8
+                      - name: RELATED_IMAGE_KEYCLOAK_INIT_CONTAINER
+                        value: quay.io/integreatly/keycloak-operator:rh-sso-7-tech-preview-sso75-init-container-rhel8_7_5
+                      - name: RELATED_IMAGE_RHSSO_INIT_CONTAINER
+                        value: quay.io/integreatly/keycloak-operator:rh-sso-7-tech-preview-sso75-init-container-rhel8_7_5
                     image: quay.io/keycloak/keycloak-operator:15.0.2
                     imagePullPolicy: Always
                     name: keycloak-operator
@@ -375,3 +379,8 @@ spec:
       image: registry.redhat.io/rh-sso-7/sso75-openshift-rhel8@sha256:b92b2180440481827745c29857875f1169f0f5373efe07a447bd67909e70f601
     - name: rhsso_openj9
       image: registry.redhat.io/rh-sso-7/sso75-openj9-openshift-rhel8@sha256:31bf3937c4cd8d00555bf00f4fc6e42b02796da72165c3f0245e62fc199664e8
+    - name: keycloak_init_container
+      image: quay.io/integreatly/keycloak-operator:rh-sso-7-tech-preview-sso75-init-container-rhel8_7_5
+    - name: rhsso_init_container
+      image: quay.io/integreatly/keycloak-operator:rh-sso-7-tech-preview-sso75-init-container-rhel8_7_5
+
