Adds bearer token to blackbox exporter to fix grafana UI endpoint down.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -236,6 +236,18 @@ rules:
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
+  - clusterrolebindings
+  verbs:
+  - '*'
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterroles
+  verbs:
+  - '*'
+- apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
   - rolebindings
   verbs:
   - create
