--- a/config/scorecard/patches/kuttl.config.yaml
+++ b/config/scorecard/patches/kuttl.config.yaml
@@ -1,7 +1,7 @@
 - op: add
   path: /stages/0/tests/-
   value:
-    image: quay.io/operator-framework/scorecard-test-kuttl:dev
+    image: quay.io/operator-framework/scorecard-test-kuttl:v2.0.0
     labels:
       suite: rhoam-basic
       test: rhoam-basic
