--- a/config/scorecard/patches/kuttl.config.yaml
+++ b/config/scorecard/patches/kuttl.config.yaml
@@ -3,5 +3,5 @@
   value:
     image: quay.io/operator-framework/scorecard-test-kuttl:v2.0.0
     labels:
-      suite: rhoam-basic
-      test: rhoam-basic
+      suite: rhoam-install
+      test: rhoam-install
