--- a/packagemanifests/managed-api-service/1.14.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.14.0/managed-api-service.clusterserviceversion.yaml
@@ -51,7 +51,7 @@ metadata:
     capabilities: Basic Install
     categories: RHOAM integration
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.14.0-rc2
+    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.14.0
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.11.0+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v2
@@ -429,7 +429,7 @@ spec:
                         value: "200"
                       - name: IDENTITY_PROVIDER_NAME
                         value: DevSandbox
-                    image: quay.io/integreatly/managed-api-service:rhoam-v1.14.0-rc2
+                    image: quay.io/integreatly/managed-api-service:rhoam-v1.14.0
                     imagePullPolicy: Always
                     name: rhmi-operator
                     ports:
