--- a/config/manifests-rhoam/bases/managed-api-service.clusterserviceversion.yaml
+++ b/config/manifests-rhoam/bases/managed-api-service.clusterserviceversion.yaml
@@ -5,7 +5,7 @@ metadata:
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     alm-examples: '[]'
     capabilities: Basic Install
-    categories: RHOAM integration
+    categories: "Integration & Delivery"
     certified: "false"
     containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.1.0
     operators.operatorframework.io/builder: operator-sdk-v1.2.0
