--- a/config/scorecard/kuttl/rhoam-install/01-create-secrets.yaml
+++ b/config/scorecard/kuttl/rhoam-install/01-create-secrets.yaml
@@ -4,3 +4,4 @@ apply:
   - resources/secret-dms.yaml
   - resources/secret-pagerduty.yaml
   - resources/secret-smtp.yaml
+  - resources/secret-addon.yaml
